--- a/syntax/java-syntax/pom.xml
+++ b/syntax/java-syntax/pom.xml
@@ -40,6 +40,14 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.30</version> <!-- 使用最新版本 -->
+			<scope>provided</scope> <!-- 重要：因为它只在编译时使用，不需要打包 -->
+		</dependency>
+
 	</dependencies>
 
 	<build>
