--- a/syntax/java-syntax/src/main/resources/application.properties
+++ b/syntax/java-syntax/src/main/resources/application.properties
@@ -1,2 +1,13 @@
 spring.application.name=demo
 server.port=8081
+spring.config.location=file:~/.spring/config/
+
+# MySQL ???? - ??????? MySQL ??????
+spring.datasource.username=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA / Hibernate ??
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
