--- a/syntax/java-syntax/src/main/resources/application.properties
+++ b/syntax/java-syntax/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 spring.application.name=demo
 server.port=8081
-spring.config.location=file:~/.spring/config/
+spring.profiles.active=local
 
 # MySQL ???? - ??????? MySQL ??????
 spring.datasource.username=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://0.0.0.0/practice?dbname=false&serverTimezone=UTC
+#spring.datasource.password=
 
 # JPA / Hibernate ??
 spring.jpa.hibernate.ddl-auto=update
