--- a/syntax/java-syntax/.gitignore
+++ b/syntax/java-syntax/.gitignore
@@ -1,4 +1,5 @@
-application-dev.properties
+application-local.properties
+src/main/resources/application-local.properties
 
 target/
 .mvn/wrapper/maven-wrapper.jar
