--- a/spring/spring-data-jpa/spring-data-jpa-example/src/main/resources/application.properties
+++ b/spring/spring-data-jpa/spring-data-jpa-example/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=demo
 server.port=8081
+spring.main.web-application-type=none
+
 
 # MySQL ???? - ??????? MySQL ??????
 spring.datasource.url=jdbc:mysql://192.168.130.5:3306/dataJpaPractice?useSSL=false&serverTimezone=UTC
