--- a/syntax/spring-bean/pom.xml
+++ b/syntax/spring-bean/pom.xml
@@ -42,37 +42,17 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.10.1</version> <!-- 版本可按需更新 -->
+		</dependency>
+
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<version>1.18.30</version> <!-- 使用最新版本 -->
 			<scope>provided</scope> <!-- 重要：因为它只在编译时使用，不需要打包 -->
 		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
-
-<!--		&lt;!&ndash; MySQL 驱动 &ndash;&gt;-->
-<!--		<dependency>-->
-<!--			<groupId>com.mysql</groupId>-->
-<!--			<artifactId>mysql-connector-j</artifactId>-->
-<!--			<scope>runtime</scope>-->
-<!--		</dependency>-->
-
-<!--		&lt;!&ndash; MyBatis 核心 &ndash;&gt;-->
-<!--		<dependency>-->
-<!--			<groupId>org.mybatis</groupId>-->
-<!--			<artifactId>mybatis</artifactId>-->
-<!--			<version>3.5.13</version> &lt;!&ndash; 建议使用当前最新稳定版本 &ndash;&gt;-->
-<!--		</dependency>-->
-<!--		&lt;!&ndash; MySQL 驱动 &ndash;&gt;-->
-<!--		<dependency>-->
-<!--			<groupId>mysql</groupId>-->
-<!--			<artifactId>mysql-connector-java</artifactId>-->
-<!--			<version>8.0.33</version> &lt;!&ndash; 请确保与你的MySQL版本兼容 &ndash;&gt;-->
-<!--		</dependency>-->
-
 	</dependencies>
 
 	<build>
