--- a/syntax/java-syntax/pom.xml
+++ b/syntax/java-syntax/pom.xml
@@ -48,10 +48,10 @@
 			<scope>provided</scope> <!-- 重要：因为它只在编译时使用，不需要打包 -->
 		</dependency>
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-starter-data-jpa</artifactId>-->
+<!--		</dependency>-->
 
 <!--		&lt;!&ndash; MySQL 驱动 &ndash;&gt;-->
 <!--		<dependency>-->
