--- a/mybatis/mybatis-plus-example/pom.xml
+++ b/mybatis/mybatis-plus-example/pom.xml
@@ -36,6 +36,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.baomidou</groupId>
+			<artifactId>mybatis-plus-spring-boot3-starter</artifactId>
+			<version>3.5.16</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
@@ -47,6 +53,14 @@
 			<version>1.18.30</version> <!-- 使用最新版本 -->
 			<scope>provided</scope> <!-- 重要：因为它只在编译时使用，不需要打包 -->
 		</dependency>
+
+		<!-- MySQL 驱动 -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.33</version> <!-- 请确保与你的MySQL版本兼容 -->
+		</dependency>
+
 	</dependencies>
 
 	<build>
